--- a/conta-comigo/src/_assets/css/modules/inicio.module.css
+++ b/conta-comigo/src/_assets/css/modules/inicio.module.css
@@ -63,6 +63,8 @@
     background-color: var(--secundary-color);
     border-radius: 10px;
     margin-top: 30px;
+    z-index: 0;
+    cursor: pointer;
 }
 
 
