Implementando sistema de validações na autenticação

--- a/conta-comigo/src/_assets/css/modules/cadastro.module.css
+++ b/conta-comigo/src/_assets/css/modules/cadastro.module.css
@@ -6,11 +6,12 @@
 }
 
 .form .erro{
-    color: red;
+    color: #ff3030;
     font-weight: normal;
     padding: 0;
     margin: 0;
     margin-left: 10px;
+    display: none;
 }
 
 .form .ativo{
