--- a/conta-comigo/src/_assets/css/modules/add_cliente.module.css
+++ b/conta-comigo/src/_assets/css/modules/add_cliente.module.css
@@ -29,6 +29,8 @@
     margin-top: 50px;
     margin-left: -70px;
     z-index: -2;
+    height: 330px;
+
 }
 
 .container_head{
@@ -73,22 +75,9 @@
     margin-left: 210px;
  
 }
-.buttons .button_one{
-    width: 220px;
-    height: 50px;
-    font-size: 13px;
-    font-weight: bold;
-
-    background-color: white;
-    border-radius: 10px;
-    margin-top: 30px;
-    z-index: 0;
-    cursor: pointer;
-
-}
 
 
-.buttons .button_two{
+.buttons button{
     width: 220px;
     height: 50px;
     font-size: 13px;
@@ -119,6 +108,28 @@
 }
 
 .container_right .valor{
+    margin-left: 60px;
     color: #888888;
+}
+
+.container_right .add_cliente{
+    margin-right: 20px;
+    width: 25px;
+    height: 25px;
+    font-size: 13px;
+    font-weight: bold;
+    color: white;
+    border: none;
+    background-color: var(--secundary-color);
+    border-radius: 15px;
+    margin-top: 5px;
+    z-index: 0;
+    cursor: pointer;
+
+}
+.container_right img {
+    margin-top: 3px;
+    width: 13px;
+    height: 13px;
 }
 
