--- a/conta-comigo/src/_assets/css/modules/add_cliente.module.css
+++ b/conta-comigo/src/_assets/css/modules/add_cliente.module.css
@@ -1,9 +1,8 @@
 .main{
-    width: 80%;
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    float: right;
 }
 
 .main .main_head{
@@ -27,9 +26,8 @@
     width: 800px;
     padding: 70px 0px 50px 80px;
     margin-top: 50px;
-    margin-left: -70px;
-    z-index: -2;
-    height: 330px;
+    height: 400px;
+    z-index: 0;
 
 }
 
@@ -61,34 +59,35 @@
 
 
 .pessoas{
-    padding: 20px 20px 20px 0px;
+    padding: 0px 20px 20px 0px;
     width: 710px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    /* background-color: red; */
+    height: 240px;
+    overflow: auto;
+    margin-top: 30px;
 
 }
 .buttons{
-    width: 520px;
-    display: flex;
-    justify-content: space-around;
-    margin-left: 210px;
- 
+    float: right;
+    width: 300px;
 }
 
 
 .buttons button{
     width: 220px;
     height: 50px;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: bold;
     color: white;
     border: none;
     background-color: var(--secundary-color);
     border-radius: 10px;
     margin-top: 30px;
-    z-index: 0;
     cursor: pointer;
+    float: left;
 
 }
 .container .container_right{
@@ -123,7 +122,6 @@
     background-color: var(--secundary-color);
     border-radius: 15px;
     margin-top: 5px;
-    z-index: 0;
     cursor: pointer;
 
 }
