--- a/conta-comigo/src/_assets/css/modules/mesas.module.css
+++ b/conta-comigo/src/_assets/css/modules/mesas.module.css
@@ -1,5 +1,5 @@
 .main{
-    width: 80%;
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -27,7 +27,6 @@
     width: 800px;
     padding: 70px 0px 50px 80px;
     margin-top: 50px;
-    margin-left: -70px;
     z-index: -2;
 }
 
@@ -73,22 +72,9 @@
     margin-left: 210px;
  
 }
-.buttons .button_one{
-    width: 220px;
-    height: 50px;
-    font-size: 13px;
-    font-weight: bold;
-
-    background-color: white;
-    border-radius: 10px;
-    margin-top: 30px;
-    z-index: 0;
-    cursor: pointer;
-
-}
 
 
-.buttons .button_two{
+.buttons button{
     width: 220px;
     height: 50px;
     font-size: 13px;
