--- a/conta-comigo/src/_assets/css/modules/core modules/mesas.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/mesas.module.css
@@ -3,7 +3,15 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    float: right;
+}
+
+.msg{
+    font-size: 20px;
+    color: #888888;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main .main_head{
@@ -27,7 +35,8 @@
     width: 800px;
     padding: 70px 0px 50px 80px;
     margin-top: 50px;
-    z-index: -2;
+    height: 400px;
+    z-index: 0;
 }
 
 .container_head{
@@ -58,53 +67,85 @@
 
 
 .pessoas{
-    padding: 20px 20px 20px 0px;
+    padding: 0px 20px 20px 5px;
     width: 710px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    height: 240px;
+    overflow: auto;
+    margin-top: 30px;
 
 }
 .buttons{
-    width: 520px;
-    display: flex;
-    justify-content: space-around;
-    margin-left: 210px;
- 
+    width: 550px;
+    float: right;
 }
 
 
 .buttons button{
     width: 220px;
     height: 50px;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: bold;
     color: white;
     border: none;
     background-color: var(--secundary-color);
     border-radius: 10px;
     margin-top: 30px;
-    z-index: 0;
     cursor: pointer;
+}
 
+.buttons .btnSingular{
+    width: 220px;
+    height: 50px;
+    font-size: 15px;
+    font-weight: bold;
+    color: var(--secundary-color);
+    border: none;
+    background-color: white;
+    border: 2px solid var(--secundary-color);
+    border-radius: 10px;
+    margin-top: 30px;
+    cursor: pointer;
+    margin-right: 30px;
 }
 .container .container_right{
     height: 30px;
     display: flex;
-    width: 300px;
-    justify-content: space-around;
     align-items: center;
     margin-top: -25px;
-    margin-left: 450px;
-
+    margin-left: 500px;
 }
 
 .container_right .total{
     color: var(--paletaNum1);
     font-weight: bold;
+    font-size: 30px;
+    margin-left: 20px;
 }
 
 .container_right .valor{
-    color: #888888;
+    color: var(--secundary-color);
+}
+
+.container_right .add_cliente{
+    margin-right: 20px;
+    width: 25px;
+    height: 25px;
+    font-size: 13px;
+    font-weight: bold;
+    color: white;
+    border: none;
+    background-color: var(--secundary-color);
+    border-radius: 15px;
+    margin-top: 5px;
+    cursor: pointer;
+
+}
+.container_right img {
+    margin-top: 3px;
+    width: 13px;
+    height: 13px;
 }
 
