--- a/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
@@ -41,15 +41,26 @@
     padding: 0px 20px;
 }
 
-.container .bot .card{
+.container .bot  {
     background-color: white;
-    width: 95%;
+    width: 100%;
     height: 170px;
     border-radius: 15px;
     display: flex;
     align-items: center;
-    padding: 0px 20px;
+
 }
+.container	.bot .card{
+
+    margin-left: 40px;
+    display: flex;
+    align-content: flex-start;
+    /* padding: 0px 20px;  */
+    flex-direction: column;
+ 
+
+
+} 
 
 .card .card_main{
     width: 100%;
@@ -102,11 +113,114 @@
     height: 120px;
     background-color: var(--paletaNum1);
     border-radius: 10px;
+    margin-left: 20px;
+
 }
 
-.lineBlack{
+ .lineBlack{
     width: 7px;
     height: 120px;
     background-color: var(--secundary-color);
     border-radius: 10px;
+}
+.leftSide{
+    width: 200px;
+    height: 70px;
+    margin-left: 50px;
+}
+.leftSide .titulo{
+    font-weight: bold;
+    font-size: 22px;
+}
+.leftSide p{
+    margin-top: 10px;
+    font-size: 18px;
+}
+.cadeado{
+    margin-left:70px;
+}
+.rightSide{
+    display: flex;
+    width: 300px;
+    justify-content: flex-end;
+    flex-direction: column;
+    margin-left: 100px;
+    display: flex;
+
+}
+.rightSide .add_func{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    
+}
+
+.rightSide .valor{
+    font-size: 18px;
+    font-weight: bold;
+    margin-left:90px;
+    color: var(--secundary-color);
+}
+
+.rightSide .add_cliente{
+    margin-right: 40px;
+    width: 25px;
+    height: 25px;
+    font-size: 13px;
+    font-weight: bold;
+    color: white;
+    border: none;
+    background-color: var(--secundary-color);
+    border-radius: 15px;
+    margin-top: 2px;
+    cursor: pointer;
+
+}
+.rightSide img {
+    margin-top: 3px;
+    width: 13px;
+    height: 13px;
+}
+
+.rightSide .listar{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    font-size: 16px;
+    margin-left: 23px;
+    margin-top: 10px;   
+
+   
+}
+.rightSide .listar img{
+    margin-top: 6px;
+}
+.card .card_titulo{
+    font-weight: bold;
+    font-size: 22px;
+    width: 250px;
+
+}
+.card p{
+    font-size: 18px;
+    margin-top: 15px;
+}
+.select {
+    margin-top: 17px;
+    width: 500px;
+    height: 34px;
+    display: flex;
+    flex-direction: row;
+    color: var(--paletaNum1);
+}
+
+
+.select input {
+    width: 15px;
+    height: 15px;
+    color: var(--paletaNum1);
+}
+
+.select span {
+    padding: 20px;
 }
