--- a/conta-comigo/src/_assets/css/modules/core modules/funcionarios.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/funcionarios.module.css
@@ -3,16 +3,6 @@
     justify-content: center;
 }
 
-.msg{
-    font-size: 20px;
-    color: #888888;
-    width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .valor{
     margin-right: 30px;
     font-size: 20px;
@@ -41,7 +31,7 @@
 .container{
     background-color: white;
     border-radius: 16px;
-    width: 900px;
+    width: 700px;
     height: 460px;
     padding: 40px 60px;
     margin-top: 50px;
@@ -156,7 +146,14 @@
     padding: 0px 20px;
 }
 
-
+select{
+    width: 150px;
+    height: 45px;
+    padding: 0px 20px;
+    font-size: 18px;
+    margin-top: 20px;
+    border: none;
+}
 
 .popup button{
     width: 340px;
@@ -171,6 +168,17 @@
     cursor: pointer;
 }
 
+.precos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.precos input{
+    width: 100px;
+    margin-left: 3px;
+    padding: 10;
+}
 
 .passagem .line{
     width: 82px;
