--- a/conta-comigo/src/_assets/css/modules/core modules/inicio.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/inicio.module.css
@@ -78,24 +78,56 @@
     justify-content: space-between;
 }
 
-@media screen and (max-width: 1150px) {
-    .main{
-        width: 90%;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 50px;
+@media screen and (max-width: 1150px){
+    .container{
+        margin-top: 130px;
     }
+}
+
+@media screen and (max-width: 900px) {
+    .container{
+        width: 450px;
+        margin-top: 130px;
+    }
+
+    .pagamentos{
+        width: 400px;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .pagamentos{
+        width: 300px;
+    }
+
+    .container_head .passagem .line{
+        width: 70px;
+        margin-left: 50px;
+    }
+
+
 
     .container{
-        background-color: white;
-        border-radius: 16px;
-        width: 400px;
-        margin-top: 150px;
-        z-index: -2;
+        padding: 70px 0px 50px 40px;
+        width: 300px;
     }
 
-    .container .pagamentos{
-        flex-direction: column;
-        width: 400px;
+    .container_head p{
+        font-size: 20px;
+    }
+   .container_head .desc{
+        font-size: 16px;
+    }
+
+    .container .container_head button{
+        font-size: 15px;
+        width: 150px;
+    }
+
+    .container .container_main .titulo{
+        font-size: 15px;
     }
 }
