--- a/conta-comigo/src/_assets/css/modules/divisao modules/divisao_pers.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/divisao_pers.module.css
@@ -1,19 +1,27 @@
-.main {
-    width: 80%;
+.main{
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    float: right;
 }
 
-.main .main_head {
+.msg{
+    font-size: 20px;
+    color: #888888;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main .main_head{
     font-size: 16px;
     color: #888888;
     font-weight: bold;
     width: 100%;
 }
 
-.main_head p {
+.main_head p{
     font-weight: normal;
     font-size: 12px;
     margin-top: 10px;
@@ -21,160 +29,177 @@
 }
 
 
-.container {
-
+.container{
     background-color: white;
     border-radius: 16px;
-    width: 400px;
+    width: 700px;
     padding: 70px 0px 50px 80px;
-    margin-top: 50px;
-    margin-left: -70px;
-    z-index: -2;
-    height: 340px;
-}
-
-.container_head {
-    margin-left: 40px;
-    font-size: 18px;
-    font-weight: bold;
-    width: 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 25px;
-
-
-
-}
-
-.container_head .total {
-    color: var(--paletaNum1);
-}
-
-
-
-.buttons {
-    margin-top: -60px;
-    width: 340px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-right: 250px;
-
-
-}
-
-.buttons .button_one {
-    width: 140px;
-    height: 45px;
-    font-size: 13px;
-    font-weight: bold;
-    background-color: white;
-    border-radius: 10px;
-    margin-top: 5px;
+    margin-top: 20px;
+    height: 400px;
     z-index: 0;
-    cursor: pointer;
-
 }
 
-
-.buttons .button_two {
-    width: 140px;
-    height: 45px;
-    font-size: 13px;
+.container_head{
+    font-size: 25px;
     font-weight: bold;
-    color: white;
-    border: none;
-    background-color: var(--secundary-color);
-    border-radius: 10px;
+    width: 300px;
+    
+    
+}
+
+.container_head .desc{
+    font-size: 22px;
+    font-weight: normal;
     margin-top: 5px;
-    z-index: 0;
-    cursor: pointer;
-
+    z-index:auto;
 }
 
-.container_top {
-    font-size: 18px;
-    font-weight: bold;
-    width: 250px;
-
-
-}
-
-
-.container_top .passagem .line {
-    width: 180px;
-    height: 3px;
+.container_head .passagem .line{
+    width: 255px;
+    height: 5px;
     background-color: var(--paletaNum1);
     position: absolute;
     z-index: -1;
     margin-top: 5px;
-    margin-left: 3px;
+    margin-left: 2px;
 }
 
-.select {
-    margin-top: -100px;
-    width: 220px;
-    height: 35px;
+.container .container_right{
+    height: 30px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin-left: 4px;
+    margin-top: -25px;
+    margin-left: 400px;
 }
 
-.select select {
-    box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
-    position: absolute;
-    width: 316px;
-    height: 40px;
-    border: none;
-    background-color: #F2F2F2;
-    color: var(--secundary-color);
-    font-size: 16px;
-    padding: 5px 5px 5px 10px ;
-
-
-
-}
-
-.center {
-    margin-top: 75px;
-    margin-right: 90px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.center p {
+.container_right .total{
+    color: var(--paletaNum1);
     font-weight: bold;
-    font-size: 22px;
-
+    font-size: 30px;
+    margin-left: 20px;
 }
 
-.container_main {
-    /* background-color: brown; */
+.container_right .valor{
+    color: var(--secundary-color);
+}
+
+.cards{
+    width: 630px;
+    height: 290px;
     display: flex;
-    width: 320px;
-    height: 230px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    overflow: scroll;
+    padding: 0px 20px 20px 0px;
+}
+
+.card{
+    width: 280px;
+    height: 220px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+.card_header{
+    width: 100%;
+    height: 50px;
     display: flex;
-    margin-top: 15px;
+    justify-content: space-between;
+}
+
+.card_header .icon{
+    width: 70px;
+    height: 100%;
+    display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
 }
 
-.container_main input {
+.card_header .nome, .preco{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
 
-    width: 300px;
-    text-decoration: none;
-    box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
-    background-color: white;
-    padding: 10px 10px;
-    margin: 8px 0;
-    margin-top: 30px;
-    border: none;
-    border-bottom: 3px solid var(--paletaNum1);
+.card_header .nome{
+    width: 100px;
+    font-size: 16px;
+    font-weight: bold;
+}
 
+.card_header .preco{
+    width: 100px;
+    font-size: 20px;
+}
+
+.card_main{
+}
+
+.card_titulo{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card_titulo p{
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.card_titulo .btn img{
+    width: 10px;
+    height: 10px;
+}
+
+.card_titulo .btn{
+    width: 20px;
+    height: 20px;
+    background-color: var(--secundary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    margin-top: 3px;
+}
+
+.card_pessoas{
+    width: 100%;
+    max-height: 100px;
+    overflow: auto;
+}
+
+.card_pessoa{
+    display: flex;
+    margin-top: 10px;
+}
+
+.card_pessoa .nomePessoa{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card_pessoa .precoPessoa{
+    color: var(--paletaNum1);
+    font-size: 16px;
+    width: 30%;
+    font-weight: bold;
+}
+
+.card_pessoa .editar{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card_pessoa .editar img{
+    width: 19px;
+    height: 19px;
 }
