--- a/conta-comigo/src/_assets/css/modules/divisao modules/opcao_divisao.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/opcao_divisao.module.css
@@ -21,71 +21,68 @@
 }
 
 
-.container {
+.container{
     background-color: white;
     border-radius: 16px;
-    width: 800px;
-    padding: 70px 0px 50px 80px;
-    margin-top: 50px;
-    z-index: -2;
-    height: 340px;
+    width: 720px;
+    padding: 70px 80px 50px 80px;
+    margin-top: 20px;
+    height: 400px;
+    z-index: 0;
 }
 
-.container_head {
+.container_head{
     font-size: 25px;
     font-weight: bold;
-    width: 250px;
-
-
+    width: 300px;
+    
 }
 
-.container_head .desc {
+.container_head .desc{
     font-size: 22px;
     font-weight: normal;
     margin-top: 5px;
-    z-index: auto;
+    z-index:auto;
 }
 
-.container_head .passagem .line {
-    width: 195px;
-    height: 3px;
+.container_head .passagem .line{
+    width: 235px;
+    height: 5px;
     background-color: var(--paletaNum1);
     position: absolute;
     z-index: -1;
     margin-top: 5px;
-    margin-left: 3px;
+    margin-left: 2px;
 }
 
 
-.buttons {
-    margin-top: 45px;
-    width: 380px;
+.buttons{
+    width: 100%;
+    margin-top: 95px;
     display: flex;
-    justify-content: space-around;
-    margin-left: 170px;
-
-
+    justify-content: center;
 }
 
-.buttons .button_one {
+.buttons button{
+    border: none;
+    font-size: 16px;
     width: 140px;
     height: 45px;
-    font-size: 13px;
     font-weight: bold;
+}
+
+.buttons .button_one{
     background-color: white;
     border-radius: 10px;
     margin-top: 30px;
     z-index: 0;
     cursor: pointer;
-
+    border: 2px solid var(--secundary-color);
+    margin-right: 20px;
 }
 
 
-.buttons .button_two {
-    width: 140px;
-    height: 45px;
-    font-size: 13px;
-    font-weight: bold;
+.buttons .button_two{
     color: white;
     border: none;
     background-color: var(--secundary-color);
@@ -96,28 +93,25 @@
 
 }
 
-.container .container_right {
+.container .container_right{
     height: 30px;
     display: flex;
-    width: 300px;
-    justify-content: space-around;
     align-items: center;
     margin-top: -25px;
-    margin-left: 450px;
-
+    margin-left: 500px;
 }
 
-.container_right .total {
+.container_right .total{
     color: var(--paletaNum1);
     font-weight: bold;
-    font-size: large;
-
+    font-size: 30px;
+    margin-left: 20px;
 }
 
-.container_right .valor {
-    color: #888888;
-    margin-left: 100px;
+.container_right .valor{
+    color: var(--secundary-color);
 }
+
 
 .select {
     margin-top: 10px;
@@ -142,8 +136,7 @@
 }
 
 .center {
-    margin-top: 75px;
-    margin-right: 90px;
+    margin-top: 110px;
     display: flex;
     justify-content: center;
     align-items: center;
