--- a/conta-comigo/src/_assets/css/modules/lateral_menu.module.css
+++ b/conta-comigo/src/_assets/css/modules/lateral_menu.module.css
@@ -3,6 +3,24 @@
     height: 100vh;
 }
 
+
+
+.lines{
+    width: 30px;
+    height: 30px;
+    margin-left: 30px;
+    display: none;
+    cursor: pointer;
+}
+
+.lines .line{
+    width: 90%;
+    height: 5px;
+    background-color: var(--secundary-color);
+    margin-top: 5px;
+    border-radius: 40px;
+}
+
 .menu_lateral{
     width: 200px;
     background-color: white;
@@ -188,6 +206,10 @@
 
 @media screen and (max-width: 1150px) {
 
+    .bodyF{
+        position: fixed;
+        z-index: 2;
+    }
     .menu{
         display: flex;
         justify-content: center;
@@ -201,6 +223,10 @@
 
     .logomarca {
         display: flex;
+    }
+
+    .bodyF{
+        height: 100px;
     }
 
     .menu_lateral{
@@ -235,10 +261,15 @@
 }
 
 @media screen and (max-width: 800px){
+
+    .lines{
+        display: block;
+    }
     .menu_lateral{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: 98.5vw;
     }
 
     .menu_lateral .head{
