--- a/conta-comigo/src/_assets/css/modules/listas modules/lista_pagamentos.module.css
+++ b/conta-comigo/src/_assets/css/modules/listas modules/lista_pagamentos.module.css
@@ -23,3 +23,16 @@
     width: 300px;
     margin-top: 10px;
 }
+
+@media screen and (max-width: 600px) {
+
+    .pagamento .titulo{
+        font-size: 16px;
+    }
+    .pagamento{
+        width: 200px;
+    }
+    .pagamento img{
+        width: 200px;
+    }
+}
