implementando opção de voltar nos cards de popup

--- a/conta-comigo/src/_assets/css/modules/core modules/add_itens.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/add_itens.module.css
@@ -234,6 +234,7 @@ table img{
     display: flex;
     justify-content: space-between;
     width: 350px;
+    margin-top: 40px;
 }
 
 .popup .header_popup .line{
@@ -248,6 +249,7 @@ table img{
     font-size: 28px;
     font-weight: bold;
 }
+
 
 .search{
     height: 46px;
