--- a/conta-comigo/src/_assets/css/modules/core modules/cardapio.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/cardapio.module.css
@@ -186,6 +186,7 @@ table tr .editarApagar{
     display: flex;
     justify-content: space-between;
     width: 350px;
+    margin-top: 40px;
 }
 
 .popup .header_popup .line{
