--- a/conta-comigo/src/_assets/css/modules/core modules/funcionarios.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/funcionarios.module.css
@@ -111,6 +111,7 @@
     display: flex;
     justify-content: space-between;
     width: 350px;
+    margin-top: 40px;
 }
 
 .popup .header_popup .line{
