--- a/conta-comigo/src/_assets/css/global.css
+++ b/conta-comigo/src/_assets/css/global.css
@@ -14,6 +14,15 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.close{
+  display: flex;
+  cursor: pointer;
+}
+
+.close p{
+  margin-left: 10px;
+  font-weight: bold;
+}
 
 .botSuporte{
   z-index: 1;
