--- a/conta-comigo/src/_assets/css/modules/core modules/mesas.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/mesas.module.css
@@ -149,3 +149,115 @@
     height: 13px;
 }
 
+
+@media screen and (max-width: 1150px) {
+
+    .main {
+        margin-top: 50px;
+    }
+
+    .container {
+        margin-top: 150px;
+    }
+
+}
+
+@media screen and (max-width: 900px) {
+
+    .buttons {
+        width: 300;
+        float: right;
+
+
+
+    }
+
+    .buttons button {
+        width: 180px;
+        height: 46px;
+
+
+
+    }
+
+    .buttons .btnSingular {
+        width: 180px;
+        height: 46px;
+        margin-left: 100px;
+    }
+
+    .container {
+        width: 430px;
+        height: 560px;
+        margin-top: 120px;
+
+    }
+
+    .container .container_right {
+        width: 230px;
+        margin-left: 190px;
+
+    }
+
+    .pessoas {
+        width: 300px;
+        height: 400px;
+        margin-left: 10px;
+
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+
+    .buttons {
+        width: 150;
+        float: right;
+        margin-top: -20px;
+
+
+
+    }
+
+    .buttons button {
+        width: 153px;
+        height: 46px;
+
+
+    }
+
+    .buttons .btnSingular {
+        width: 153px;
+        height: 46px;
+        margin-left: 193px;
+    }
+
+    .container {
+        width: 320px;
+        height: 580px;
+        margin-top: 90px;
+
+    }
+
+    .container .container_right {
+        margin-top: 30px;
+        width: 240px;
+        margin-left: 10px;
+    }
+
+    .container_right .total {
+        font-size: 16px;
+
+    }
+
+    .pessoas {
+        width: 250px;
+        height: 400px;
+        margin-left: -15px;
+
+
+    }
+
+
+}
+
