--- a/conta-comigo/src/_assets/css/modules/divisao modules/pag_singular.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/pag_singular.module.css
@@ -134,4 +134,155 @@
     font-size:22px;
     
 }
+
+
+@media screen and (max-width: 1150px) {
+
+    .main {
+        margin-top: 50px;
+    }
+
+    .container {
+        margin-top: 150px;
+    }
+
+}
+
+@media screen and (max-width: 900px) {
+
+    .buttons {
+        width: 300;
+        float: right;
+        margin-top: 50px;
+    }
+
+    .buttons button {
+        width: 150px;
+        height: 46px;
+
+    }
+
+    .buttons .btnSingular {
+        width: 150px;
+        height: 46px;
+        margin-left: 100px;
+    }
+
+    .container {
+        width: 400px;
+        height: 480px;
+        margin-top: 120px;
+
+    }
+    
+        
+
+    .container .container_right {
+        margin-top: 30px;
+        width: 240px;
+        margin-left: 120px;
+    }
+
+    .container_right .total {
+        font-size: 20px;
+
+    }
+
+    
+.container_head{
+    font-size: 25px;
+    font-weight: bold;
+    width: 300px;
+    margin-left: 87px;
+    
+}
+
+.container_head .desc{
+    font-size: 22px;
+    font-weight: normal;
+    margin-top: 5px;
+    z-index:auto;
+}
+
+.container_head .passagem .line{
+    width: 235px;
+    height: 5px;
+    background-color: var(--paletaNum1);
+    position: absolute;
+    z-index: -1;
+    margin-top: 5px;
+    margin-left: 2px;
+}
+
+
+
+}
+
+@media screen and (max-width: 600px) {
+
+    .buttons {
+        width: 150;
+        float: right;
+        margin-top: 0px;
+
+
+
+    }
+
+    .buttons button {
+        width: 153px;
+        height: 46px;
+
+
+    }
+
+
+    .container {
+        width: 280px;
+        height: 440px;
+        margin-top: 90px;
+
+    }
+
+    .container .container_right {
+        margin-top: 30px;
+        width: 240px;
+        margin-left: 65px;
+    }
+
+    .container_right .total {
+        font-size: 16px;
+
+    }
+
+    
+    .container_head{
+        font-size: 25px;
+        font-weight: bold;
+        width: 300px;
+        margin-left: 25px;
+        
+    }
+    
+    .container_head .desc{
+        font-size: 22px;
+        font-weight: normal;
+        margin-top: 5px;
+        z-index:auto;
+    }
+    
+    .container_head .passagem .line{
+        width: 235px;
+        height: 5px;
+        background-color: var(--paletaNum1);
+        position: absolute;
+        z-index: -1;
+        margin-top: 5px;
+        margin-left: 2px;
+    }
+    
+
+}
+ 
+
  
