--- a/conta-comigo/src/_assets/css/modules/divisao modules/total_divisao.module.css
+++ b/conta-comigo/src/_assets/css/modules/divisao modules/total_divisao.module.css
@@ -45,7 +45,8 @@
 
 
 }
-.container_head .total{
+
+.container_head .total {
     color: var(--paletaNum1);
 }
 
@@ -130,6 +131,7 @@
     font-size: 22px;
 
 }
+
 .container_main {
     /* background-color: brown; */
     width: 320px;
@@ -138,4 +140,108 @@
     margin-top: -5px;
     justify-content: center;
     flex-direction: column;
+}
+
+@media screen and (max-width: 1150px) {
+
+    .main {
+        margin-top: 50px;
+    }
+
+    .container {
+        margin-top: 150px;
+    }
+
+}
+
+@media screen and (max-width: 900px) {
+
+    .container {
+        width: 400px;
+        height: 300px;
+        margin-top: 120px;
+
+    }
+
+    .container_head {
+        margin-left: 5px;
+        font-size: 23px;
+        font-weight: bold;
+        width: 250px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        margin-top: -20px;
+
+    }
+
+    .container_head .total {
+        color: var(--paletaNum1);
+        margin-left: 6px;
+    }
+
+
+
+}
+
+@media screen and (max-width: 600px) {
+
+
+    .container {
+        width: 320px;
+        height: 310px;
+        margin-top: 120px;
+
+    }
+
+    .container_head {
+        margin-left: 5px;
+        font-size: 23px;
+        font-weight: bold;
+        width: 250px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        margin-top: -20px;
+
+
+    }
+
+    .container_head .total {
+        color: var(--paletaNum1);
+        margin-left: 6px;
+    }
+
+    .container_main {
+        margin-left: -45px;
+        width: 280px;
+        height: 230px;
+        display: flex;
+        margin-top: -5px;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .buttons {
+        margin-top: -10px;
+        margin-left: -26px;
+        width: 280px;
+
+
+    }
+
+    .buttons .button_one {
+        width: 120px;
+        height: 45px;
+
+    }
+
+
+    .buttons .button_two {
+        width: 120px;
+        height: 45px;
+    }
+
 }
