--- a/conta-comigo/src/_assets/css/global.css
+++ b/conta-comigo/src/_assets/css/global.css
@@ -32,7 +32,7 @@
 }
 
 .voltar{
-  width: 880px;
+  width: 80%;
   margin-top: 30px;
   font-size: 18px;
   font-weight: bold;
@@ -49,10 +49,20 @@
   display: flex;
 }
 
+@media screen and (max-width: 950px){
+  /* .voltar {
+    margin-left: 300px;
+  } */
+}
+
 @media screen and (max-width: 1150px){
   .fBody{
     display: flex;
     flex-direction: column;
+  }
+
+  .voltar{
+    margin-top: 130px;
   }
 }
 
