--- a/conta-comigo/src/_assets/css/modules/bot.module.css
+++ b/conta-comigo/src/_assets/css/modules/bot.module.css
@@ -11,6 +11,21 @@
     cursor: pointer;
 }
 
+.botOpen{
+  background-color: white;
+  width: 300px;
+  height: 400px;
+  box-shadow: 0px 4px 4px rgb(0, 0, 0, 25%);
+  border-radius: 5px;
+
+}
+
+.botHeader{
+  width: 100%;
+  height: 50px;
+  background-color: var(--secundary-color);
+}
+
 
 .main {
     background: white;
