--- a/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
+++ b/conta-comigo/src/_assets/css/modules/core modules/perfil.module.css
@@ -211,7 +211,6 @@
     width: 500px;
     height: 34px;
     display: flex;
-    flex-direction: row;
     color: var(--paletaNum1);
 }
 
@@ -224,4 +223,92 @@
 
 .select span {
     padding: 20px;
+}
+
+@media screen and (max-width: 1150px) {
+    .container{
+        margin-top: 140px;
+    }
+
+    @media screen and (max-width: 900px){
+        .card .card_main .card_header .card_titulo{
+            font-size: 16px;
+        }
+
+        .container{
+            justify-content: center;
+            margin-top: 180px;
+        }
+
+
+        .container .up{
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .container .up .card{
+            margin-top: 20px;
+        }
+
+        .container .mid .card{
+            width: 42%;
+            margin-top: 20px;
+        }
+
+        .container .mid{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .rightSide .valor{
+            display: none;
+        }
+
+        .rightSide .listar{
+            display: none;
+        }
+
+
+        .rightSide{
+            width: 100px;
+            margin-left: 30px;
+        }
+
+        .leftSide{
+            margin-left: 20px;
+        }
+
+        .cadeado{
+            margin-left: 30px;
+        }
+
+        .leftSide .titulo{
+            font-size: 18px;
+        }
+
+        .leftSide p{
+            font-size: 16px;
+        }
+
+        .select{
+            flex-direction: column;
+        }
+
+        .grupo{
+            display: flex;
+            flex-direction: column;
+        }
+
+        .container .bot  {
+            background-color: white;
+            width: 42%;
+            height: 170px;
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+        
+        }
+
+    }
 }
